k8s/networking.yml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: service-test
  ports:
    - port: 8000
      targetPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-vs
spec:
  hosts:
    - "service"
  http:
    - route:
        - destination:
            host: service
            subset: A
          weight: 75
        - destination:
            host: service
            subset: B
          weight: 25
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-dr
spec:
  host: "service"
  subsets:
    - name: A
      labels:
        app: service-test
        version: A
    - name: B
      labels:
        app: service-test
        version: B
